Fix dark mode and style conflict from index.css

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  
+ /* Commented out since this overrides style for signin/signup page
+  * display: flex;
+  * place-items: center; 
+  */
   min-width: 320px;
   min-height: 100vh;
 }
